Use theme colors; fix high contrast z-index bug

--- a/theme/navigateregions.less
+++ b/theme/navigateregions.less
@@ -11,20 +11,21 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0,0,0,0);
+    background-color: var(--pxt-neutral-alpha0);
     width: 100%;
     height: 100%;
     z-index: @modalDimmerZIndex;
 
     .region-button {
         position: absolute;
-        background-color: rgba(0, 0, 0, .6);
+        background-color: var(--pxt-neutral-alpha50);
         border-radius: 0;
         border: 3px solid white;
         padding: 0;
 
         &.simulator-region {
-            z-index: 1;
+            // Must be more than the z-index of 1 that high contrast mode adds to all buttons.
+            z-index: 2 !important;
         }
 
         &.simulator-collapsed {
@@ -33,11 +34,11 @@
         }
 
         &:focus-visible {
-            background-color: rgba(0, 0, 0, .3);
+            background-color: var(--pxt-neutral-alpha20);
 
             div {
-                border: 5px solid white;
-                background-color: black;
+                border-width: 5px;
+                background-color: var(--pxt-neutral-foreground1);
             }
 
             p {
@@ -45,13 +46,14 @@
             }
         }
 
+
+
         div {
-            background-color: rgba(0, 0, 0, .6);
-            border: 2px solid white;
-            width: fit-content;
+            background-color: var(--pxt-neutral-alpha80);
+            border: 2px solid var(--pxt-secondary-foreground);
+            width: 3.125em;
+
             margin: auto;
-            padding-right: 1em;
-            padding-left: 1em;
             border-radius: 5px;
 
             @media only screen and (max-width: @largestMobileScreen) {
@@ -60,7 +62,7 @@
             }
         }
         p {
-            color: white;
+            color: var(--pxt-neutral-background1);
             font-size: 2rem;
 
             @media only screen and (max-width: @largestTabletScreen), 
@@ -69,4 +71,5 @@
             }
         }
     }
+
 }
